navbar covering sections heading fixed

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -7,6 +7,10 @@ p {
   opacity: 0.8;
 }
 
+h2 {
+  padding-top: 8vh;
+}
+
 .text-red {
   color: $custom-red;
 }
